--- a/front/gdadc-ui/package.json
+++ b/front/gdadc-ui/package.json
@@ -23,6 +23,7 @@
     "crypto-js": "^4.2.0",
     "ng-apexcharts": "^1.15.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.21.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
