--- a/front/gdadc-ui/angular.json
+++ b/front/gdadc-ui/angular.json
@@ -28,7 +28,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "src/public",
+                "output": "/"
               }
             ],
             "styles": [
